--- a/LABORATORY PROGRAMS/README
+++ b/LABORATORY PROGRAMS/README
@@ -1,1 +1,5 @@
-## Program
+<h3>LABORATORY PROGRAMS</h3><br>
+1,Get an integer input from a user. If the number is odd, then find the factorial of the number and find the number of digits in the factorial of the number. If the number is even, then check if the given number is a palindrome or not.
+
+
+
